--- a/index.html
+++ b/index.html
@@ -30,19 +30,24 @@
         <div class="under-line"></div>
         <div class="content" id="contact-part">
           <div class="contact-list">
-            <div class="contact-logo" id="w-image"></div><a href="https://wa.me/917587845520?text=Hello%20chalbo" class="contact-details" target="_blank"> whatsapp</a>
+            <div class="contact-logo" id="w-image"></div><a href="https://wa.me/917587845520?text=Hello%20chalbo"
+              class="contact-details" target="_blank"> whatsapp</a>
           </div>
           <div class="contact-list">
-            <div class="contact-logo" id="c-image"></div><a href="tel:+91 7587845520" target="_blank" class="contact-details"> +91 7587845520</a>
+            <div class="contact-logo" id="c-image"></div><a href="tel:+91 7587845520" target="_blank"
+              class="contact-details"> +91 7587845520</a>
           </div>
           <div class="contact-list">
-            <div class="contact-logo" id="g-image"></div><a href="https://github.com/Shrey-raj-singh" target="_blank" class="contact-details"> Shrey-raj-singh</a>
+            <div class="contact-logo" id="g-image"></div><a href="https://github.com/Shrey-raj-singh" target="_blank"
+              class="contact-details"> Shrey-raj-singh</a>
           </div>
           <div class="contact-list">
-            <div class="contact-logo" id="e-image"></div><a href="" target="_blank" class="contact-details"> rjshrey23@gmail.com</a>
+            <div class="contact-logo" id="e-image"></div><a href="" target="_blank" class="contact-details">
+              rjshrey23@gmail.com</a>
           </div>
           <div class="contact-list">
-            <div class="contact-logo" id="l-image"></div><a href="" target="_blank" class="contact-details"> Shrey raj singh</a>
+            <div class="contact-logo" id="l-image"></div><a href="" target="_blank" class="contact-details"> Shrey raj
+              singh</a>
           </div>
         </div>
       </div>
@@ -72,9 +77,9 @@
         </div>
         <div class="under-line"></div>
         <div class="content">
-          <p>Dedicated and enthusiastic 2nd year B-Tech Computer Science Engineering student with a strong academic
-            background and a passion for full-stack development. Seeking internship opportunities to apply my knowledge
-            and skills in a real-world setting while continuing to learn and grow as a software developer.</p>
+          <p>A highly motivated and detail-oriented Computer Science Engineering student seeking internship
+            opportunities to apply and enhance my skills in web development and mobile app development, with a keen
+            interest in contributing to innovative projects.</p>
         </div>
       </div>
       <div class="tiles">
@@ -109,57 +114,25 @@
         <div class="content">
           <div id="project">
             <div class="project-items">
-              <div class="project-item-image"></div>
-              <div class="project-item-dets">
-                <title>- Front-end: Flutter <p>Lorem, ipsum.</p>
-                </title><strong>whatsapp Clone</strong>
-                <p>- Front-end: Flutter</p>
-                <p>- Back-end: Node.js</p>
-              </div>
-            </div>
-            <div class="project-items">
-              <div class="project-item-image"></div>
-              <div class="project-item-dets">
-                <title>- Front-end: Flutter <p>Lorem, ipsum.</p>
-                </title><strong>whatsapp Clone</strong>
-                <p>- Front-end: Flutter</p>
-                <p>- Back-end: Node.js</p>
-              </div>
-            </div>
-            <div class="project-items">
-              <div class="project-item-image"></div>
-              <div class="project-item-dets">
-                <title>- Front-end: Flutter <p>Lorem, ipsum.</p>
-                </title><strong>whatsapp Clone</strong>
-                <p>- Front-end: Flutter</p>
-                <p>- Back-end: Node.js</p>
-              </div>
-            </div>
-            <div class="project-items">
-              <div class="project-item-image"></div>
-              <div class="project-item-dets">
-                <title>- Front-end: Flutter <p>Lorem, ipsum.</p>
-                </title><strong>whatsapp Clone</strong>
-                <p>- Front-end: Flutter</p>
-                <p>- Back-end: Node.js</p>
-              </div>
-            </div>
-            <div class="project-items">
               <div class="project-item-image" id="whatsapp-clone"></div>
               <div class="project-item-dets">
-                <title>- Front-end: Flutter <p>Lorem, ipsum.</p>
                 </title><strong>whatsapp Clone</strong>
                 <p>- Front-end: Flutter</p>
                 <p>- Back-end: Node.js</p>
               </div>
             </div>
             <div class="project-items">
-              <div class="project-item-image"></div>
+              <div class="project-item-image" id="To-Do"></div>
               <div class="project-item-dets">
-                <title>- Front-end: Flutter <p>Lorem, ipsum.</p>
-                </title><strong>whatsapp Clone</strong>
-                <p>- Front-end: Flutter</p>
-                <p>- Back-end: Node.js</p>
+                </title><strong>To-Do</strong>
+                <p>- Flutter based </p>
+              </div>
+            </div>
+            <div class="project-items">
+              <div class="project-item-image" id="keep-note"></div>
+              <div class="project-item-dets">
+                </title><strong>Keep-Notes</strong>
+                <p>- Flutter based </p>
               </div>
             </div>
           </div>
@@ -174,7 +147,6 @@
         <div class="under-line"></div>
         <div class="content">
           <h4>Ms. Sangeeta Gupta</h4>
-          <p>Phone</p>
         </div>
       </div>
     </div>
