--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <h1>Shrey Raj Singh</h1>
       <p>Computer Science Engineering Student</p>
     </div>
+    <a href="./docs/Resume - Shrey Raj Singh.pdf" download="./docs/Resume - Shrey Raj Singh.pdf">pdf</a>
   </header>
 
   <section>
