--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <!-- <link rel="stylesheet" href="./Resume_style.css"> -->
   <link rel="stylesheet" href="./index.css">
   <link rel="stylesheet" href="./index768.css">
-  <!-- <link rel="stylesheet" href="./index568.css"> -->
-  <!-- <link rel="stylesheet" href="./index468.css"> -->
+  <link rel="stylesheet" href="./index568.css">
+  <link rel="stylesheet" href="./index468.css">
   <style>
   </style>
 </head>
