--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
 
         <div class="left-container">
-          <div class="container-header">
+          <div class="container-header achievements">
             <p>Academic achievements.</p>
           </div>
           <div class="container-content achievements-li">
@@ -252,7 +252,7 @@
               </div>
             </div>
 
-            <div class="project-card">
+            <div class="project-card lower-margin">
               <div class="pin-icon"><center><div class="pin-circle-brown-filled"><div class="pin-line-brown"></div></div></center></div>
               <div class="project-card-content">
                 <div class="project-name">
@@ -269,7 +269,7 @@
               </div>
             </div>
 
-            <div class="project-card">
+            <div class="project-card lower-margin">
               <div class="pin-icon"><center><div class="pin-circle-brown-filled"><div class="pin-line-brown"></div></div></center></div>
               <div class="project-card-content">
                 <div class="project-name">
@@ -298,7 +298,7 @@
           <div class="container-content refrence low-margin">
             <p><b>-	Winner of SIH internal Hackathon</b></p>
             <p><b>-	Hosted Web-pages using GitHub</b></p>
-            <p><b>- Ms. Sangeeta Gupta</b>Front-end developer certifications from <b>Coursera</b></p>
+            <p><b>- Meta </b> Front-end developer certifications from <b>Coursera</b></p>
 
           </div>
         </div>
